catalog/elk/kubernetes/logstash/filebeat-container-daemonset.aws.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: filebeat-container
spec:
  template:
    metadata:
      name: filebeat-container-logs
      labels:
        app: elk
        component: filebeat
        role: collect-container-logs
        release: stable      # stable, canary, alpha, beta, experimental, latest, debug
        environment: dev     # dev, staging, qa, production
        partition: all       # customer_1, customer_2, developer_1, beta_release
    spec:
      containers:
      - name: filebeat-container
        imagePullPolicy: Always
        image: hbouvier/filebeat-kubernetes:1.2.3
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 200Mi
        volumeMounts:
        - name: varlog
          mountPath: /var/log/containers
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers             # AWS
          # mountPath: /mnt/sda1/var/lib/docker/containers  # MiniKube
          readOnly: true
        - name: filebeat-config-dir
          mountPath: /etc/filebeat/
      terminationGracePeriodSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log/containers
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: filebeat-config-dir
        configMap:
          name: filebeat-container-logs
          items:
          - key: filebeat.yml
            path: filebeat.yml
