catalog/elk/kubernetes/logstash/filebeat-container-daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: filebeat-container
spec:
  template:
    metadata:
      labels:
        app: elk
        component: filebeat-container
        role: collect-container-log
        release: stable      # canary
        environment: staging # dev, qa, production
        tier: daemon         # frontend, backend, cache
        partition: all       # customer_1, customer_2, developer_1, beta_release
      name: filebeat-container
    spec:
      containers:
      - name: filebeat-container
        imagePullPolicy: Always
        image: hbouvier/filebeat-kubernetes:1.2.3
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 200Mi
        volumeMounts:
        - name: varlog
          mountPath: /var/log/containers
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
        - name: filebeat-config-dir
          mountPath: /etc/filebeat/
      terminationGracePeriodSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log/containers
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: filebeat-config-dir
        configMap:
          name: filebeat-container
          items:
          - key: filebeat.yml
            path: filebeat.yml
