catalog/elk/kubernetes/logstash/filebeat-log-daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: filebeat-log
spec:
  template:
    metadata:
      name: filebeat-system-logs
      labels:
        app: elk
        component: filebeat
        role: collect-system-logs
        release: stable      # stable, canary, alpha, beta, experimental, latest, debug
        environment: dev     # dev, staging, qa, production
        partition: all       # customer_1, customer_2, developer_1, beta_release
    spec:
      containers:
      - name: filebeat
        imagePullPolicy: Always
        image: hbouvier/filebeat-kubernetes:1.2.3
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 200Mi
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: filebeat-config-dir
          mountPath: /etc/filebeat/
      terminationGracePeriodSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: filebeat-config-dir
        configMap:
          name: filebeat-log
          items:
          - key: filebeat.yml
            path: filebeat.yml
