catalog/elk/kubernetes/logstash/logstash-service.minikube.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
spec:
  selector:
    app: elk
    component: logstash
  ports:
  - name: syslog-tcp
    port: 5000
    protocol: TCP
  - name: syslog
    port: 5000
    protocol: UDP
  - name: http
    port: 8080
    protocol: TCP
  - name: filebeat-raw
    port: 5043
    protocol: TCP
  - name: filebeat-json
    port: 5044
    protocol: TCP
